--- a/Real_Estate_Data_Analysis.ipynb
+++ b/Real_Estate_Data_Analysis.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/Real estate.csv')\n",
+        "df = pd.read_csv('real_estate.csv')\n",
         "df"
       ],
       "metadata": {
